icon added and get api data

--- a/ios/TenTwentyApp/Info.plist
+++ b/ios/TenTwentyApp/Info.plist
@@ -51,5 +51,39 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>UIAppFonts</string>
+		<string>AntDesign.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>FontAwesome5_Brands.ttf</string>
+		<string>FontAwesome5_Regular.ttf</string>
+		<string>FontAwesome5_Solid.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>Zocial.ttf</string>
+		<string>Roboto_medium.ttf</string>
+		<string>Roboto.ttf</string>
+		<string>rubicon-icon-font.ttf</string>
+		<string>Fontisto.ttf</string>
+		<string>poppins-Regular.ttf</string>
+		<string>Bevan.ttf</string>
+		<string>BethEllenRegular.ttf</string>
+		<string>Roboto-Light.ttf</string>
+		<string>Roboto-Thin.ttf</string>
+		<string>AmiriQuran-Regular.ttf</string>
+		<string>Scheherazade.ttf</string>
+		<string>DroidNaskh-Regular.ttf</string>
+		<string>DroidArabicNaskh.ttf</string>
+		<string>NotoSerif-SemiCondensedMedium.ttf</string>
+		<string>Harmattan-Bold.ttf</string>
+	</array>
 </dict>
 </plist>
