--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.1",
+    "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-device-info": "^10.8.0",
     "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-swiper": "^1.6.0",
