--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.5",
+    "add": "^2.0.6",
     "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
@@ -22,8 +24,11 @@
     "react-native-gesture-handler": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-sensitive-info": "^5.5.8",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^13.3.0",
+    "react-native-youtube-iframe": "^2.3.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
